--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./www/ico/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <canvas id="bg"></canvas>
-    <script type="module" src="/main.js"></script>
-  </body>
-</html>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./assets/ico/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <link rel="stylesheet" href="./assets/style/src.css">
+  <link rel="stylesheet" href="./assets/style/style.css">
+
+  <script type="module" src="./assets/scripts/index.js"></script>
+
+  <link rel="shortcut icon" href="#">
+  <title>Spotify Web API</title>
+</head>
+
+<body>
+  <div id="navBarContainer">
+    <div id="navBarIconContainer">
+        <img id="navBarIcon" src="./assets/ico/logo.png">
+    </div>
+  </div>
+
+  <div id="mainContainer">
+      <h2>Spotify Web API</h2>
+      <a id="btnAuthorize">Authorize With Spotify</a>
+  </div>
+</body>
