--- a/assets/user.html
+++ b/assets/user.html
@@ -38,6 +38,7 @@
 
     <div id="mainContainer">
         <div id="moodBoard">
+            <div id="canvasCoverAnimation"></div>
             <canvas id="userBgThreeAnimation"></canvas>
             <div id="items"></div>
         </div>
@@ -50,9 +51,8 @@
             <div id="profileText">PROFILE</div>
             <div id="userName"></div>
             <div id="userStatsContainer">
-                <div id="userPlaylists">7 Playlists • </div>
-                <div id="userFollowers">Followers • </div>
-                <div id="userFollowing">7 Following</div>
+                <div id="userPlaylists">Playlists • </div>
+                <div id="userFollowers">Followers</div>
             </div>
             <div id="warningMessage">
                 <img id="warningMessageIcon" src="./ico/warning.png">
