--- a/assets/user.html
+++ b/assets/user.html
@@ -48,6 +48,15 @@
         </div>
         <div id="user">
             <img id="userPfp">
+
+            <div id="currPlayingSubContainer">
+                <img id="currPlayingIcon" src="./ico/currPlaying.png">
+                <div id="currPlayingContainer">
+                    <div id="currPlayingItemName">EMPTY DREAMS</div>
+                    <div id="currPlayingItemAuthor">CYAPRISS</div>
+                </div>
+            </div>
+
             <div id="profileText">PROFILE</div>
             <div id="userName"></div>
             <div id="userStatsContainer">
@@ -69,5 +78,5 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script type="module" src="scripts/utils/browser.js"></script>
+<!-- <script type="module" src="scripts/utils/browser.js"></script> -->
 <script type="module" src="../main.js"></script>
