--- a/assets/user.html
+++ b/assets/user.html
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script type="module" src="../main.js"></script>
+
     <div id="navBarContainer">
         <div id="navBarIconContainer">
             <img id="navBarIcon" src="ico/logo.png">
@@ -24,6 +29,9 @@
             </div>
             <div id="btnPlaylists">
                 Playlists
+            </div>
+            <div id="btnPlayer">
+                Player
             </div>
             <div id="btnUser">
                 User
@@ -45,6 +53,9 @@
         <div id="playlists">
             <div id="playlistGrid"></div>
             <div id="playlistContent"></div>
+        </div>
+        <div id="player">
+            <button id="btnPauseMusic">Pause Music</button>
         </div>
         <div id="user">
             <img id="userPfp">
@@ -80,8 +91,5 @@
             </div>
         </div>
     </div>
-</body>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script type="module" src="../main.js"></script>
+</body>
