--- a/assets/user.html
+++ b/assets/user.html
@@ -30,9 +30,6 @@
             <div id="btnPlaylists">
                 Playlists
             </div>
-            <div id="btnPlayer">
-                Player
-            </div>
             <div id="btnUser">
                 User
             </div>
@@ -44,6 +41,13 @@
         </div>
     </div>
 
+    <div id="playbackMixerContainer">
+        <img id="playbackMixerBg">
+        <div id="playbackMixerTrackName"></div>
+        <div id="playbackMixerArtistName"></div>
+        <img id="playbackMixerInteract" src="../assets/ico/play.webp">
+    </div>
+
     <div id="mainContainer">
         <div id="moodBoard">
             <div id="canvasCoverAnimation"></div>
@@ -53,9 +57,6 @@
         <div id="playlists">
             <div id="playlistGrid"></div>
             <div id="playlistContent"></div>
-        </div>
-        <div id="player">
-            <button id="btnPauseMusic">Pause Music</button>
         </div>
         <div id="user">
             <img id="userPfp">
